SoulSyncApp/k8s/rollouts-canary/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulsync-app-stable
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: soulsync
    tier: app
---
apiVersion: v1
kind: Service
metadata:
  name: soulsync-app-canary
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: soulsync
    tier: app
